# PythonDB

./: .gitignore  New_Task.py  README.md  db_backup.xml  features.md  pyproject.toml
Connector/: ExportSql.py  GenerateJson.py  Quickstart-8209fc4d5cad.json  Send_sheet.py  Settings.py  backup.json  sheetsToSql.py  test_json.json
Connector/Config_files/: Quickstart-289b63edd2a2.json
googlesheets/: Create_Sheet.py  Functions.py  Get_Sheet.py  __init__.py  credentials.json  token.pickle
googlesheets.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_googlesheets.py
